implementacoes